tests/data/placebo/test_redshift_remove_matched_security_groups/redshift.DescribeClusters_2.json
{
  "status_code": 200,
  "data": {
    "Clusters": [
      {
        "PubliclyAccessible": false,
        "MasterUsername": "custodian",
        "VpcSecurityGroups": [
          {
            "Status": "active",
            "VpcSecurityGroupId": "sg-7a3fcb13"
          }
        ],
        "ClusterPublicKey": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCRV5pypmfm64j9QQAx8iKWKIB47TmOo6rNcMmHHJhu8Ecx64uur4444Qr1k2lNzRd7U/9jNDviDNn0HaY9kZVcJGQ3FVCSNsKSjMPvLeb/aAefXamrE6nKKOk5dA1tOlC/3iIC9OLefcqW4V9IweZgjyJdPK17ZHZ4FqB065NpQCjPgbc+flo/I7utqp2gLg3JDKNanKkJUtiVBcp/b9myb5dKqhY7cU4BsckJsihm2VfJvlTYacZTT0ju4y7D4eyvrZ+U2jUlmZIYAsS7wB2aadtYsuiSOVRwRgtZnLJ2X3hdW5E0c7Cfq3oC+3DIO9gUyDdm7BmoL3jPzjV7m8jl Amazon-Redshift\n",
        "NumberOfNodes": 1,
        "PendingModifiedValues": {},
        "VpcId": "vpc-09b75e60",
        "ClusterVersion": "1.0",
        "Tags": [],
        "AutomatedSnapshotRetentionPeriod": 1,
        "ClusterParameterGroups": [
          {
            "ParameterGroupName": "default.redshift-1.0",
            "ParameterApplyStatus": "in-sync"
          }
        ],
        "PreferredMaintenanceWindow": "mon:14:30-mon:15:00",
        "Endpoint": {
          "Port": 5439,
          "Address": "test-sg-base.ckxbkraibktf.ca-central-1.redshift.amazonaws.com"
        },
        "IamRoles": [],
        "AllowVersionUpgrade": true,
        "ClusterCreateTime": {
          "hour": 22,
          "__class__": "datetime",
          "month": 12,
          "second": 6,
          "microsecond": 824000,
          "year": 2016,
          "day": 21,
          "minute": 26
        },
        "ClusterSubnetGroupName": "default",
        "EnhancedVpcRouting": false,
        "ClusterSecurityGroups": [],
        "ClusterIdentifier": "test-sg-base",
        "ClusterNodes": [
          {
            "NodeRole": "SHARED",
            "PrivateIPAddress": "172.31.29.164",
            "PublicIPAddress": "52.60.104.22"
          }
        ],
        "AvailabilityZone": "ca-central-1a",
        "NodeType": "dc1.large",
        "Encrypted": false,
        "ClusterRevisionNumber": "1150",
        "ClusterStatus": "available"
      },
      {
        "PubliclyAccessible": false,
        "MasterUsername": "custodian",
        "VpcSecurityGroups": [
          {
            "Status": "removing",
            "VpcSecurityGroupId": "sg-6360920a"
          },
          {
            "Status": "adding",
            "VpcSecurityGroupId": "sg-7a3fcb13"
          }
        ],
        "ClusterPublicKey": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCCha5MkVuBT2YeRERNI9tLNeNIka9mBZ5bpm7dLoaUmE+rFLsjZVCAsVZo2bcG5f+oDKGsa12SHJrSsrC8uLdcPgFgiqRb9gjRsSdhkZyy6YkZjgCTFUAv3fqosxXmoJ/QIRhoaMyvKSas1YdxfehA9p/NY3Kyyk6W4qAcc7gfqVyPELuviab4mQ1b8XTMdZg156IJbF5pOiVedgCihP1PnsXSynUjfRSomUl5RVuAhn3ZxOILKTidcrNBuwK5qePMCJeXC1yn2BAq5HuH4MWxQXuHIKSBecXYJfVGF8OCtmoH/PSWhPlZAmgn94/fD9T70cqREEAdzyoahF8IYFEN Amazon-Redshift\n",
        "NumberOfNodes": 1,
        "PendingModifiedValues": {},
        "VpcId": "vpc-09b75e60",
        "ClusterVersion": "1.0",
        "Tags": [],
        "AutomatedSnapshotRetentionPeriod": 1,
        "ClusterParameterGroups": [
          {
            "ParameterGroupName": "default.redshift-1.0",
            "ParameterApplyStatus": "in-sync"
          }
        ],
        "PreferredMaintenanceWindow": "tue:20:30-tue:21:00",
        "Endpoint": {
          "Port": 5439,
          "Address": "test-sg-fail.ckxbkraibktf.ca-central-1.redshift.amazonaws.com"
        },
        "IamRoles": [],
        "AllowVersionUpgrade": true,
        "ClusterCreateTime": {
          "hour": 22,
          "__class__": "datetime",
          "month": 12,
          "second": 11,
          "microsecond": 783000,
          "year": 2016,
          "day": 21,
          "minute": 25
        },
        "ClusterSubnetGroupName": "default",
        "EnhancedVpcRouting": false,
        "ClusterSecurityGroups": [],
        "ClusterIdentifier": "test-sg-fail",
        "ClusterNodes": [
          {
            "NodeRole": "SHARED",
            "PrivateIPAddress": "172.31.21.9",
            "PublicIPAddress": "52.60.106.255"
          }
        ],
        "AvailabilityZone": "ca-central-1a",
        "NodeType": "dc1.large",
        "Encrypted": false,
        "ClusterRevisionNumber": "1150",
        "ClusterStatus": "available"
      }
    ],
    "ResponseMetadata": {}
  }
}
